--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4282,7 +4282,7 @@
                 <div class="logo-animation-container">
                   <div class="logo-container">
                     <a
-                      href="https://www.mentionlytics.com/"
+                      href="index.html"
                       title="Mentionlytics"
                     >
                       <img
@@ -4297,7 +4297,7 @@
                   </div>
                   <div class="sticky-logo-container">
                     <a
-                      href="https://www.mentionlytics.com/"
+                      href="index.html"
                       title="Mentionlytics"
                     >
                       <img
@@ -4654,7 +4654,7 @@
                         class="menu-item menu-item-type-post_type menu-item-object-page regularmenu show-label rtm-menu-depth-0"
                       >
                         <a
-                          href="index.html"
+                          href="https://www.mentionltics.com/"
                         >
                           <span class="main-nav-item-title main-title-with-desc"
                             >Try for FREE</span
